使用 Colaboratory 建立

--- a/0306.ipynb
+++ b/0306.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9VZiHFMB6a3EZSd/A2er2",
+      "authorship_tag": "ABX9TyO1SylPTQSbB4BZy6on+Xt6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,269 @@
       ],
       "source": [
         "print(\"hi今天是0306\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 0"
+      ],
+      "metadata": {
+        "id": "RZHSiPqA8xQo"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "faRVLfJr81Co",
+        "outputId": "5a3972e3-0b5c-4755-fd50-0617fd764d54"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 1"
+      ],
+      "metadata": {
+        "id": "Wzdtzc5i9WQw"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gYecl4vB9ZlR",
+        "outputId": "7286b1e7-a8aa-463b-c983-1243d763f6b9"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = 2"
+      ],
+      "metadata": {
+        "id": "rEVZgdrC9bbA"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FjUpf2JY9dW4",
+        "outputId": "786fe535-e273-4422-cb62-f16efbb3af7e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r-24I8wn9eyo",
+        "outputId": "f076c465-a145-48e6-e29d-5a999f70c470"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 1, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a+b+c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vyzNirwd9kNA",
+        "outputId": "4ac6081d-567f-445c-c80e-a9271e72dc9d"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d=4"
+      ],
+      "metadata": {
+        "id": "PWqbVn-I-mag"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AuRPH2jF-wWw",
+        "outputId": "11426b59-d39e-4088-e71a-5d746fd6a663"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a+b+c+d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5YqrRl1K-xnw",
+        "outputId": "1b301761-3337-4073-9313-5c3fc2fb8c28"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A=0"
+      ],
+      "metadata": {
+        "id": "6nggh2p1-0uY"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xj-wXc5B-5z4",
+        "outputId": "d22dc78a-06a9-417d-b073-ce7d08fa1cbf"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
       ]
     }
   ]
