使用 Colaboratory 建立

--- a/0313.ipynb
+++ b/0313.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBVjMc1WChvzUBgwYFSmBx",
+      "authorship_tag": "ABX9TyOg+Oy5DBGN5Joc96PK2XJR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,33 +52,96 @@
     {
       "cell_type": "code",
       "source": [
-        "age , name = 18 , \"hogan\""
+        "a=b=c=1"
       ],
       "metadata": {
-        "id": "ojLbha6Z1_UJ"
+        "id": "RebnyVbUVoKK"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "age"
+        "a, b, c"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Qid_jZOy2vQP",
-        "outputId": "61510134-4599-4db6-9bf7-768c4979b3b6"
+        "id": "QbJeqQVDVth5",
+        "outputId": "3f19b7b3-ef90-42c4-e946-17bd66a37952"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "18"
+              "(1, 1, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = \"1\""
+      ],
+      "metadata": {
+        "id": "snbjppU7VxlK"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "POd-jZuAV3HK",
+        "outputId": "7a89528e-b66b-4724-998d-e527da03f66c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, '1')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a+b+c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hArhVkpgV62i",
+        "outputId": "a378b1b6-4c1c-4497-cd84-654d10e3666f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
             ]
           },
           "metadata": {},
@@ -89,30 +152,282 @@
     {
       "cell_type": "code",
       "source": [
-        "name"
+        "a+d"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 167
         },
-        "id": "UDAQN7II2wnf",
-        "outputId": "a210c56b-fa08-4cc2-a6ed-17bd96e6d458"
+        "id": "MfTRsFTMV-sy",
+        "outputId": "367772be-6829-4cf5-ae31-3e52e1971498"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-2a1ef2cae9c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e=123"
+      ],
+      "metadata": {
+        "id": "0EQHR0mGWBgx"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f=\"123\""
+      ],
+      "metadata": {
+        "id": "rh3MAdxvWES5"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "e"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYLhy5lyWNp7",
+        "outputId": "e0c5919f-a494-428a-f4a3-82a7df2b8f85"
+      },
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'hogan'"
+              "123"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "b33yGo62WPCq",
+        "outputId": "7ea3877c-f33f-447e-e278-0f317e881d26"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'123'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8OyLNdygWRdy",
+        "outputId": "258d14a8-3879-4df3-bd60-730db88c2320"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g=\"0313\""
+      ],
+      "metadata": {
+        "id": "bRmRHw_RWYfK"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "9hRksq5BWbpx",
+        "outputId": "09617ba1-960c-457f-ca78-446521f71049"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0313'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age , name = 18, \"hogan\""
+      ],
+      "metadata": {
+        "id": "ojLbha6Z1_UJ"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age, name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UDAQN7II2wnf",
+        "outputId": "f7c072ba-df62-47c3-a335-b4d117fd5649"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(18, 'hogan')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a+b+c+e"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rJGKD9ioWhew",
+        "outputId": "54b33098-4fa8-4f59-fbd5-5a7791b9b6cc"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "126"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a +b+c+e+age"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3vlKWhpNWeuR",
+        "outputId": "c8c79f1d-f8cf-4de7-d97c-367c061dba70"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "144"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(d, f,g, name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YyED0MaKXTmb",
+        "outputId": "07c976f2-0ee2-4fb7-f355-549278358f7b"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 123 0313 hogan\n"
+          ]
         }
       ]
     },
@@ -124,33 +439,33 @@
       "metadata": {
         "id": "In7gEFDp3wmP"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "yoho = \"早安早安\""
+        "hi = \"早安早安\""
       ],
       "metadata": {
         "id": "XDIIg6io30AP"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(\"老鐵\",day,yoho)"
+        "print(\"老鐵\",day,hi)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jtq811HJ391f",
-        "outputId": "d1332da7-9780-49c5-eb35-0a887056296f"
+        "outputId": "a24a5a9e-0264-4e73-8363-2de96130f746"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,16 +479,16 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"老鐵\"+day+yoho)"
+        "print(\"老鐵\"+day+hi)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GcooZMdX4sd4",
-        "outputId": "6a27d5f0-30a3-4199-8eff-7d20ee0da6f6"
+        "outputId": "b04e01c4-408f-4690-9514-aa7fe8d2ec14"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,16 +502,16 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"老鐵\"+\"!\"+day+yoho+\"$\")"
+        "print(\"老鐵\"+\"!\"+day+hi+\"$\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YaztAKcz41X3",
-        "outputId": "2b0e66b8-a22b-49b7-9124-a2e974fbaa9d"
+        "outputId": "b85303c8-87c6-4d1f-9a70-e742cffc6d9a"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,62 +525,171 @@
     {
       "cell_type": "code",
       "source": [
-        "#g"
+        "h=1\n",
+        "i=2\n",
+        "j=3"
       ],
       "metadata": {
-        "id": "tMchnoUs6mKQ"
+        "id": "tKUj-RydXnJi"
       },
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "g"
+        "h"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 167
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "hTCR9ufD63UH",
-        "outputId": "761f5f36-fdc6-4973-d8c5-711549bb4f7f"
+        "id": "0lWcuQQOXr8C",
+        "outputId": "e77fe3a1-db41-4c18-c8ed-543504929d95"
       },
-      "execution_count": 30,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-a5938ace3f42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'g' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "str=\"這是字串\""
+        "i"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nkU1_JOlXtey",
+        "outputId": "e19ff132-529f-463e-c31a-eec459c00cbc"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "McJfdYvrXvCK",
+        "outputId": "3b0c6421-0820-4c15-cf0c-c640b8746e9c"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h, i ,j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZW7yWzrCX0gi",
+        "outputId": "0d5e1f41-7f09-4b5d-e022-c323f5f1445f"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str='這是字串'"
       ],
       "metadata": {
         "id": "1buuLRW_7lQ3"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "str1=\"hogan說:'早安'\""
+        "str"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ylIRd1-wYBFz",
+        "outputId": "6d3f11ea-25b3-45ab-a85c-345b96e999f1"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'這是字串'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str1=\"hogan說:'早安'\"\n",
+        "str2=\"hogan說;'早安'\""
       ],
       "metadata": {
         "id": "oq37hKM18Umu"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -281,7 +705,7 @@
         "id": "80kq5iet-Y42",
         "outputId": "1621d662-75c0-4323-9895-ba40c6eaff67"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,6 +725,36 @@
     {
       "cell_type": "code",
       "source": [
+        "str2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "9RuhMb0LYL0C",
+        "outputId": "46a73984-9636-4b14-8884-ac529f4e076e"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"hogan說;'早安'\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(type(56))\n",
         "print(type(56.0))\n",
         "print(type(\"hey man,how are you?\"))\n",
@@ -313,7 +767,7 @@
         "id": "PM_TQG6j-_Ql",
         "outputId": "bebf9f74-c06e-4159-b3bf-a1105ea92eec"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +789,7 @@
       "metadata": {
         "id": "laj27c4ZAy6e"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +800,7 @@
       "metadata": {
         "id": "ImogaVM_A6lF"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -357,7 +811,7 @@
       "metadata": {
         "id": "8bvJy4WWA7f_"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +826,7 @@
         "id": "EZczM2dt_oXE",
         "outputId": "257398af-bdef-4a1a-bdfa-f41d1078be22"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,22 +840,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(type(a),type(b),type(c))"
+        "print(type(a),type(b),type(c),type(d),type(e),type(f),type(g),type(h),type(i),type(j))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "485LaH1SBA11",
-        "outputId": "7bc67388-14a0-4fd1-efa3-92a992385fe9"
+        "outputId": "5b7b2b2d-a145-4543-9232-5b50fa77939b"
       },
-      "execution_count": 37,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'int'> <class 'int'> <class 'int'>\n"
+            "<class 'int'> <class 'int'> <class 'int'> <class 'str'> <class 'int'> <class 'str'> <class 'str'> <class 'int'> <class 'int'> <class 'int'>\n"
           ]
         }
       ]
