使用 Colaboratory 建立

--- a/0501.ipynb
+++ b/0501.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhMbI7H7zdCw1UWV6wB5S/",
+      "authorship_tag": "ABX9TyOGfAz/I7lSwHjS2LQU47+A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +29,40 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Hello World')"
+        "print(\"0501\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "hjKeBEj7jTKx",
-        "outputId": "dccc03ba-a02b-42a0-bc19-e6ee751e10e9"
+        "id": "p81yUpgbnF0o",
+        "outputId": "377ebe23-ec7f-4a0f-8bab-282b4b2bb0b1"
       },
       "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0501\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "print(\"Hello World\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "avltv_yrnJjg",
+        "outputId": "1baf48e7-35ee-4d37-9492-fa50dcc1858f"
+      },
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -52,56 +76,22 @@
     {
       "cell_type": "code",
       "source": [
-        "F = float(input(\"請輸入華氏溫度：\"))"
+        "F = int(input(\"華氏溫度為:\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GUGYjYHcji2y",
-        "outputId": "a542f53a-b440-4d79-ae3d-7564da0e46a7"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "請輸入華氏溫度：100\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "C = (F - 32) * 5 / 9"
-      ],
-      "metadata": {
-        "id": "EUu99X80jyAU"
+        "id": "PGDzt-MInK7Q",
+        "outputId": "b3235a87-78ac-4c8a-94c5-b6c6290ae10b"
       },
       "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"攝氏溫度為：%.1f\" % C)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "n-NGT_nSj3Ue",
-        "outputId": "7a6986f1-9ca5-4819-cb71-d78545a26f18"
-      },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "攝氏溫度為：37.8\n"
+            "華氏溫度為:100\n"
           ]
         }
       ]
@@ -109,55 +99,111 @@
     {
       "cell_type": "code",
       "source": [
-        "num = 5"
+        "攝氏溫度 = (F-32)*5/9"
       ],
       "metadata": {
-        "id": "0tA5ad5ylD1x"
+        "id": "WHSq0mLOnOGQ"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "total_sum = 0"
-      ],
-      "metadata": {
-        "id": "k1TFPv94lGM-"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in range(1, num+1):\n",
-        "  total_sum += i"
-      ],
-      "metadata": {
-        "id": "Zp8IXpaqlIMq"
-      },
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(total_sum)"
+        "攝氏溫度"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ilXx-IuYlN25",
-        "outputId": "94db53d1-f8c6-487e-9c61-fa0f3240f667"
+        "id": "RJGWVSXsnPlb",
+        "outputId": "c0ad030e-95a6-4e8a-ea55-ef58a5489db6"
       },
-      "execution_count": 10,
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "37.77777777777778"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(type(攝氏溫度))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j5T8V_dUnQuB",
+        "outputId": "8c2f45d7-3b52-4bd2-f907-0372fa8cd2f6"
+      },
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "<class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(str('%.1f' % 攝氏溫度))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "opDof7K_nSqg",
+        "outputId": "dd9a0afd-557b-4429-be0a-f582112bd25b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "37.8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tmp = 0\n",
+        "for i in range(1,6):\n",
+        "  tmp +=i\n",
+        "  print(\"%d\" % tmp)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6TIluYEOnVNS",
+        "outputId": "3b44ad58-a611-470b-8ff1-bc4843f51a74"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "6\n",
+            "10\n",
             "15\n"
           ]
         }
@@ -166,10 +212,56 @@
     {
       "cell_type": "code",
       "source": [
-        "principal = 10000"
+        "本金 = int(input(\"請輸入本金存款金額:\"))"
       ],
       "metadata": {
-        "id": "g7ikWz6glj7v"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5Ie_fUHtnYIr",
+        "outputId": "5647c3a0-267b-438a-bbe7-bf77f8eba7c3"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入本金存款金額:10000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "時間 = int(input(\"請輸入年數:\"))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oFglYIeYna20",
+        "outputId": "a7b590b9-7e3d-40f3-9150-22e9df969812"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "請輸入年數:6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "未來本金 = 本金*(1+0.02)**6"
+      ],
+      "metadata": {
+        "id": "zp9-aCgCneT2"
       },
       "execution_count": 11,
       "outputs": []
@@ -177,44 +269,48 @@
     {
       "cell_type": "code",
       "source": [
-        "interest_rate = 0.02"
+        "未來本金"
       ],
       "metadata": {
-        "id": "7-9w-Wsalxza"
-      },
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "principal *= (1 + interest_rate) ** 6"
-      ],
-      "metadata": {
-        "id": "GpVPvHSflzlJ"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"6年後存款為：\", principal)"
-      ],
-      "metadata": {
+        "id": "mNMb_DrMngbl",
+        "outputId": "831a10f1-a617-4360-b866-5a4cc167a33b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "lSH2Wf3fl2dN",
-        "outputId": "2bc6408d-c708-4112-809c-5a4dad268e8d"
+        }
       },
-      "execution_count": 14,
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11261.62419264"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"6年後存款為:\",未來本金)"
+      ],
+      "metadata": {
+        "id": "u9Uly6oMnisq",
+        "outputId": "5be44bf1-d568-4f1c-8ad4-db68711bdfe5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6年後存款為： 11261.62419264\n"
+            "6年後存款為: 11261.62419264\n"
           ]
         }
       ]
